kubernetes/netbox/base/dragonfly/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly
  namespace: netbox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: netbox
spec:
  podSelector:
    matchLabels:
      app: netbox-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netbox
          podSelector:
            matchLabels:
              app: netbox-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 9999

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netbox
          podSelector:
            matchLabels:
              app: netbox-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 9999
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-netbox
  namespace: netbox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: netbox
spec:
  podSelector:
    matchLabels:
      app: netbox-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netbox
          podSelector:
            matchLabels:
              app.kubernetes.io/name: netbox
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-netbox-egress
  namespace: netbox
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: netbox
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: netbox
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netbox
          podSelector:
            matchLabels:
              app: netbox-dragonfly
              app.kubernetes.io/name: dragonfly
              app.kubernetes.io/part-of: dragonfly
      ports:
        - port: 6379
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress-dragonfly
  namespace: netbox
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: netbox
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: netbox-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
        - ipBlock:
            cidr: 10.101.10.5/32  # OKD WildCard
        - ipBlock:
            cidr: 10.101.10.7/32  # OKD APP WildCard
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow-to-openshift-ingress
  namespace: netbox
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: netbox
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: netbox-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 443  # Passthrough/ReEncrypt Termination
        - protocol: TCP
          port: 80  # Edge Termination
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-operator-system
  namespace: netbox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: netbox
spec:
  podSelector:
    matchLabels:
      app: netbox-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dragonfly-operator-system
          podSelector:
            matchLabels:
              control-plane: controller-manager
      ports:
        - protocol: TCP
          port: 9999
